ping/deploy/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: ping
  name: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ping
  template:
    metadata:
      labels:
        run: ping
    spec:
      containers:
      - image: jose-armesto/ping
        imagePullPolicy: IfNotPresent
        name: ping
        ports:
        - containerPort: 8080
