ping/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ping
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: ping
